--- a/trunk/plugins/ontop/CMakeLists.txt
+++ b/trunk/plugins/ontop/CMakeLists.txt
@@ -1,36 +1,18 @@
 #################
 # ontop library #
 #################
-PROJECT(ontop)
-
-SET(ontop_LIB_SRCS
+SET(ontop_SRCS
         ontop.cpp
         ontopcfg.cpp
 )
 
-SET(ontop_LIB_HDRS
+SET(ontop_HDRS
         ontop.h
         ontopcfg.h
 )
 
-SET(ontop_UI_FILES
+SET(ontop_UICS
         ontopcfgbase.ui
 )
 
-# moc, if needed
-KDE3_AUTOMOC(${ontop_LIB_SRCS})
-
-# don't forget our ui's
-QT3_ADD_UI_FILES(ontop_LIB_SRCS ${ontop_UI_FILES})
-
-ADD_LIBRARY(ontop SHARED ${ontop_LIB_SRCS} ${ontop_LIB_HDRS})
-
-# some needed include dirs
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
-
-TARGET_LINK_LIBRARIES(ontop simlib)
-
-SET_TARGET_PROPERTIES(ontop PROPERTIES PREFIX "")
-
-# install target
-INSTALL(TARGETS ontop LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+SIM_ADD_PLUGIN(ontop)
