--- a/trunk/plugins/shortcuts/CMakeLists.txt
+++ b/trunk/plugins/shortcuts/CMakeLists.txt
@@ -1,39 +1,21 @@
 #####################
 # shortcuts library #
 #####################
-PROJECT(shortcuts)
-
-SET(shortcuts_LIB_SRCS
+SET(shortcuts_SRCS
         mousecfg.cpp
         shortcutcfg.cpp
         shortcuts.cpp
 )
 
-SET(shortcuts_LIB_HDRS
+SET(shortcuts_HDRS
         mousecfg.h
         shortcutcfg.h
         shortcuts.h
 )
 
-SET(shortcuts_UI_FILES
+SET(shortcuts_UICS
         mousecfgbase.ui
         shortcutcfgbase.ui
 )
 
-# moc, if needed
-KDE3_AUTOMOC(${shortcuts_LIB_SRCS})
-
-# don't forget our ui's
-QT3_ADD_UI_FILES(shortcuts_LIB_SRCS ${shortcuts_UI_FILES})
-
-ADD_LIBRARY(shortcuts SHARED ${shortcuts_LIB_SRCS} ${shortcuts_LIB_HDRS})
-
-# some needed include dirs
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
-
-TARGET_LINK_LIBRARIES(shortcuts simlib)
-
-SET_TARGET_PROPERTIES(shortcuts PROPERTIES PREFIX "")
-
-# install target
-INSTALL(TARGETS shortcuts LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+SIM_ADD_PLUGIN(shortcuts)
