--- a/trunk/plugins/splash/CMakeLists.txt
+++ b/trunk/plugins/splash/CMakeLists.txt
@@ -1,30 +1,15 @@
 ##################
 # splash library #
 ##################
-PROJECT(splash)
-
-SET(splash_LIB_SRCS
+SET(splash_SRCS
         splash.cpp
 )
 
-SET(splash_LIB_HDR
+SET(splash_HDRS
         splash.h
 )
 
-# moc, if needed
-KDE3_AUTOMOC(${splash_LIB_SRCS})
-
-ADD_LIBRARY(splash SHARED ${splash_LIB_SRCS} ${splash_LIB_HDR})
-
-# some needed include dirs
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
-
-TARGET_LINK_LIBRARIES(splash simlib)
-
-SET_TARGET_PROPERTIES(splash PROPERTIES PREFIX "")
-
-# install target
-INSTALL(TARGETS splash LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+SIM_ADD_PLUGIN(splash)
 
 # splash.png
 INSTALL(FILES splash.png DESTINATION ${SIM_PICT_DIR})
