--- a/trunk/plugins/styles/CMakeLists.txt
+++ b/trunk/plugins/styles/CMakeLists.txt
@@ -1,42 +1,24 @@
 ##################
 # styles library #
 ##################
-PROJECT(styles)
-
 ADD_SUBDIRECTORY(metal)
 ADD_SUBDIRECTORY(wood)
 
-SET(styles_LIB_SRCS
+SET(styles_SRCS
         fontconfig.cpp
         styles.cpp
         stylescfg.cpp
 )
 
-SET(styles_LIB_HDRS
+SET(styles_HDRS
         fontconfig.h
         styles.h
         stylescfg.h
 )
 
-SET(styles_UI_FILES
+SET(styles_UICS
         fontconfigbase.ui
         stylescfgbase.ui
 )
 
-# moc, if needed
-KDE3_AUTOMOC(${styles_LIB_SRCS})
-
-# don't forget our ui's
-QT3_ADD_UI_FILES(styles_LIB_SRCS ${styles_UI_FILES})
-
-ADD_LIBRARY(styles SHARED ${styles_LIB_SRCS} ${styles_LIB_HDRS})
-
-# some needed include dirs
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
-
-TARGET_LINK_LIBRARIES(styles simlib)
-
-SET_TARGET_PROPERTIES(styles PROPERTIES PREFIX "")
-
-# install target
-INSTALL(TARGETS styles LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+SIM_ADD_PLUGIN(styles)
