--- a/trunk/plugins/transparent/CMakeLists.txt
+++ b/trunk/plugins/transparent/CMakeLists.txt
@@ -2,44 +2,26 @@
 # transparent library #
 #######################
 IF(WIN32 OR USE_KDE3)
-	PROJECT(transparent)
-
-	SET(transparent_LIB_SRCS
+	SET(transparent_SRCS
         	transparent.cpp
 	        transparentcfg.cpp
 	)
 
-	SET(transparent_LIB_HDRS
+	SET(transparent_HDRS
         	transparent.h
 	        transparentcfg.h
 	)
 
-	SET(transparent_UI_FILES
+	SET(transparent_UICS
         	transparentcfgbase.ui
 	)
 
 	IF(NOT WIN32)
-	    SET(transparent_LIB_SRCS ${transparent_LIB_SRCS}
+	    SET(transparent_SRCS ${transparent_SRCS}
         	transtop.cpp)
 	ENDIF(NOT WIN32)
 
-	# moc, if needed
-	KDE3_AUTOMOC(${transparent_LIB_SRCS})
-
-	# don't forget our ui's
-	QT3_ADD_UI_FILES(transparent_LIB_SRCS ${transparent_UI_FILES})
-
-	ADD_LIBRARY(transparent SHARED ${transparent_LIB_SRCS} ${transparent_LIB_HDRS})
-
-	# some needed include dirs
-	INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
-
-	TARGET_LINK_LIBRARIES(transparent simlib)
-
-	SET_TARGET_PROPERTIES(transparent PROPERTIES PREFIX "")
-
-	# install target
-	INSTALL(TARGETS transparent LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+    SIM_ADD_PLUGIN(transparent)
 ELSE(WIN32 OR USE_KDE3)
 	MESSAGE(STATUS "This plugin can only be used on windows or KDE")
 ENDIF(WIN32 OR USE_KDE3)
