--- a/trunk/plugins/yahoo/CMakeLists.txt
+++ b/trunk/plugins/yahoo/CMakeLists.txt
@@ -1,9 +1,7 @@
 #################
 # yahoo library #
 #################
-PROJECT(yahoo)
-
-SET(yahoo_LIB_SRCS
+SET(yahoo_SRCS
         crypt.cpp
         md5.c
         sha.c
@@ -17,7 +15,7 @@ SET(yahoo_LIB_SRCS
         yahootransformtables.c
 )
 
-SET(yahoo_LIB_HDRS
+SET(yahoo_HDRS
         md5.h
         sha.h
         yahoo.h
@@ -27,26 +25,10 @@ SET(yahoo_LIB_HDRS
         yahoosearch.h
 )
 
-SET(yahoo_UI_FILES
+SET(yahoo_UICS
         yahoocfgbase.ui
         yahooinfobase.ui
         yahoosearchbase.ui
 )
 
-# moc, if needed
-KDE3_AUTOMOC(${yahoo_LIB_SRCS})
-
-# don't forget our ui's
-QT3_ADD_UI_FILES(yahoo_LIB_SRCS ${yahoo_UI_FILES})
-
-ADD_LIBRARY(yahoo SHARED ${yahoo_LIB_SRCS} ${yahoo_LIB_HDRS})
-
-# some needed include dirs
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
-
-TARGET_LINK_LIBRARIES(yahoo simlib)
-
-SET_TARGET_PROPERTIES(yahoo PROPERTIES PREFIX "")
-
-# install target
-INSTALL(TARGETS yahoo LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+SIM_ADD_PLUGIN(yahoo)
