po: use FILE(NATIVE_PATH) instead own regex plugins: set some output paths for win32 for better debugging

--- a/trunk/sim/CMakeLists.txt
+++ b/trunk/sim/CMakeLists.txt
@@ -122,6 +122,10 @@ ENDIF(WIN32)
 # set correct install path
 INSTALL(TARGETS simlib LIBRARY DESTINATION ${LIBDIR} RUNTIME DESTINATION ${LIBDIR})
 
+IF(WIN32)
+    SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
+ENDIF(WIN32)
+
 ##################
 # sim executable #
 ##################
@@ -154,6 +158,10 @@ TARGET_LINK_LIBRARIES(sim simlib ${QT_QTMAIN_LIBRARY})
 INSTALL(TARGETS sim RUNTIME DESTINATION ${BINDIR})
 
 SET_TARGET_PROPERTIES(sim PROPERTIES OUTPUT_NAME sim${SIM_FLAVOUR})
+
+IF(WIN32)
+    SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
+ENDIF(WIN32)
 
 # some needed libs for win32
 if(WIN32)
