--- a/trunk/plugins/styles/wood/CMakeLists.txt
+++ b/trunk/plugins/styles/wood/CMakeLists.txt
@@ -25,3 +25,7 @@ SET_TARGET_PROPERTIES(wood PROPERTIES PREFIX "")
 
 # install target
 INSTALL(TARGETS wood LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR}/styles)
+
+IF(WIN32)
+    SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}/plugins/styles)
+ENDIF(WIN32)
