fix some install issues on win32

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -71,8 +71,8 @@ endif(MSVC)
 
 SET(SIM_FLAVOUR "" CACHE STRING "Additional suffix for plugin dir and executable file")
 if(WIN32)
-    SET(LIBDIR ${CMAKE_INSTALL_PREFIX} CACHE PATH "Path to sim library")
-    SET(BINDIR ${CMAKE_INSTALL_PREFIX} CACHE PATH "Path to sim library")
+    SET(LIBDIR         .)
+    SET(BINDIR         .)
     SET(SIM_I18N_DIR   po)
     SET(SIM_ICONS_DIR  icons)
     SET(SIM_PICT_DIR   pict)
